--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>G-3 Architects</title>
+    <title>G3 Architects</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <h1>G3 Architects</h1>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Login</a></li>
+        </ul>
+      </nav>
+      <div class="banner">
+        <div class="banner-text">
+          <h1>Brand New Group of Architects</h1>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+
+        <img src="./images/banner.png" alt="" />
+      </div>
+    </header>
 
     <main></main>
 
