--- a/index.html
+++ b/index.html
@@ -32,7 +32,30 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <div class="team-features">
+        <div class="team-img">
+          <img src="./images/team1.png" alt="" />
+          <img src="./images/team2.png" alt="" />
+          <img src="./images/team3.png" alt="" />
+          <img src="./images/team4.png" alt="" />
+        </div>
+
+        <div class="team-text">
+          <h1>
+            <span class="hightlight-quick">Quick list</span>
+            <span class="heightlight-our">of Our</span><br />
+            <span class="hightlight-feature">Features</span>
+          </h1>
+          <p class="text-color-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+      </div>
+    </main>
 
     <footer></footer>
   </body>
