--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
 
     <main>
-      <div class="team-features">
+      <section class="team-features">
         <div class="team-img">
           <img src="./images/team1.png" alt="" />
           <img src="./images/team2.png" alt="" />
@@ -54,7 +54,59 @@
           </p>
           <button class="btn-primary">Explore More</button>
         </div>
-      </div>
+      </section>
+
+      <section class="feature-experience">
+        <div class="feature-experience-content">
+          <h1>Features you will love & enjoy</h1>
+          <p class="text-color-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+
+          <div class="feature-box">
+            <h3>Dexktop & Mobile Version</h3>
+            <p class="text-color-gray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="feature-box">
+            <h3>Drag & Drop Builder</h3>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="feature-box">
+            <h3>Awesome Modern Design</h3>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="feature-box">
+            <h3>Super Easy to Edit</h3>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+        </div>
+
+        <div class="feature-experience-img">
+          <img src="./images/architect.png" alt="" />
+          <div class="experience">
+            <h1>10+ Years</h1>
+            <p>Experience</p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
